--- a/crawler-tool/pom.xml
+++ b/crawler-tool/pom.xml
@@ -70,6 +70,11 @@
             <version>2.9.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
+        </dependency>
+
         <!--log4j2核心包 (spring-boot-starter-log4j2)-->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
@@ -170,6 +175,11 @@
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
             <version>1.11.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jul-to-slf4j</artifactId>
         </dependency>
     </dependencies>
     <build>
