--- a/desktop-tool/pom.xml
+++ b/desktop-tool/pom.xml
@@ -60,8 +60,8 @@
         </dependency>
 
         <dependency>
-            <groupId>com.spinfosec</groupId>
-            <artifactId>SIMPLE-DBS-SDK</artifactId>
+            <groupId>com.yk</groupId>
+            <artifactId>http-request-sdk</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
@@ -156,6 +156,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.2.4</version>
+				
+				<configuration>
+                    <createDependencyReducedPom>false</createDependencyReducedPom>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
